Name:                sqlcipher-simple
Version:             0.4.18.1
Synopsis:            Mid-Level SQLite client library
Description:
    Mid-level SQLCipher client library, forked from sqlite-simple.
    .
    Main documentation (with examples): <docs/Database-SQLite-Simple.html Database.SQLite.Simple>
    .
    You can view the project page at <https://github.com/simplex-chat/sqlcipher-simple>
    for more information.

License:             BSD3
License-file:        LICENSE
Author:              Bryan O'Sullivan, Leon P Smith, Janne Hellsten
Maintainer:          Evgeny Poberezkin <ep@simplex.chat>
Copyright:           (c) 2011 MailRank, Inc.,
                     (c) 2011-2012 Leon P Smith,
                     (c) 2012-2014 Janne Hellsten
Homepage:            https://github.com/simplex-chat/sqlcipher-simple
bug-reports:         https://github.com/simplex-chat/sqlcipher-simple/issues
Stability:           stable
Category:            Database
Build-type:          Simple

Cabal-version:       >= 1.10

extra-source-files:  README.markdown
                     changelog

Library
  Default-language:  Haskell2010
  Exposed-modules:
     Database.SQLite.Simple
     Database.SQLite.Simple.Ok
     Database.SQLite.Simple.FromField
     Database.SQLite.Simple.FromRow
     Database.SQLite.Simple.Internal
     Database.SQLite.Simple.QQ
     Database.SQLite.Simple.ToField
     Database.SQLite.Simple.ToRow
     Database.SQLite.Simple.Types
     Database.SQLite.Simple.Function
     Database.SQLite.Simple.Time
     Database.SQLite.Simple.Time.Implementation

  Build-depends:
    attoparsec >= 0.10.3,
    base < 5,
    blaze-builder,
    blaze-textual,
    bytestring >= 0.9,
    containers,
    direct-sqlcipher >= 2.3.13 && < 2.4,
    exceptions >= 0.4,
    template-haskell,
    text >= 0.11,
    time,
    transformers,
    Only >= 0.1 && < 0.1.1
    
  if impl(ghc < 8.0)
    Build-depends: semigroups >= 0.18 && < 0.20

  default-extensions:
      DoAndIfThenElse
    , OverloadedStrings
    , BangPatterns
    , ViewPatterns
    , TypeOperators

  ghc-options: -Wall -fno-warn-name-shadowing

source-repository head
  type:     git
  location: http://github.com/simplex-chat/sqlcipher-simple


test-suite test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0

  hs-source-dirs: test
  main-is:        Main.hs
  other-modules:  Common
                , Debug
                , DirectSqlite
                , Errors
                , Fold
                , Function
                , ParamConv
                , QQ
                , Simple
                , Statement
                , TestImports
                , UserInstances
                , Utf8Strings

  ghc-options: -Wall -fno-warn-name-shadowing -fno-warn-unused-do-bind

  default-extensions:
      NamedFieldPuns
    , OverloadedStrings
    , Rank2Types
    , RecordWildCards

  build-depends: base
               , base16-bytestring
               , bytestring >= 0.9
               , HUnit
               , sqlcipher-simple
               , direct-sqlcipher
               , text
               , time
